#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/google/differential-privacy/examples/go
gazelle(name = "gazelle")

gazelle(
    name = "update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_differential_privacy_examples_deps",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "go_default_library",
    srcs = [
        "io_utils.go",
        "scenarios.go",
        "visit.go",
    ],
    importpath = "github.com/google/differential-privacy/examples/go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_differential_privacy_go_v3//dpagg:go_default_library",
        "@com_github_google_differential_privacy_go_v3//noise:go_default_library",
    ],
)
