#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/google/differential-privacy/go/v3/dpagg
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "aggregation_state.go",
        "coders.go",
        "count.go",
        "helpers.go",
        "mean.go",
        "quantiles.go",
        "select_partition.go",
        "standard_deviation.go",
        "sum.go",
        "variance.go",
    ],
    importpath = "github.com/google/differential-privacy/go/v3/dpagg",
    visibility = ["//visibility:public"],
    deps = [
        "//checks:go_default_library",
        "//noise:go_default_library",
        "//rand:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "medium",
    srcs = [
        "count_confidence_interval_test.go",
        "count_test.go",
        "dpagg_test.go",
        "helpers_test.go",
        "mean_confidence_interval_test.go",
        "mean_test.go",
        "quantiles_test.go",
        "select_partition_test.go",
        "standard_deviation_test.go",
        "sum_confidence_interval_test.go",
        "sum_test.go",
        "variance_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//noise:go_default_library",
        "//rand:go_default_library",
        "//stattestutils:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)
