#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/google/differential-privacy/go/v3/noise
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "gaussian_noise.go",
        "laplace_noise.go",
        "noise.go",
        "secure_noise_math.go",
    ],
    importpath = "github.com/google/differential-privacy/go/v3/noise",
    visibility = ["//visibility:public"],
    deps = [
        "//checks:go_default_library",
        "//rand:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_gonum_v1_gonum//stat/distuv:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "gaussian_noise_test.go",
        "laplace_noise_test.go",
        "noise_test.go",
        "secure_noise_math_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//stattestutils:go_default_library"],
)
