#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/google/differential-privacy/privacy-on-beam/codelab
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "count.go",
        "mean.go",
        "multiple.go",
        "sum.go",
        "visit.go",
    ],
    importpath = "github.com/google/differential-privacy/privacy-on-beam/codelab",
    visibility = ["//visibility:public"],
    deps = [
        "//pbeam:go_default_library",
        "@com_github_apache_beam//sdks/go/pkg/beam:go_default_library",
        "@com_github_apache_beam//sdks/go/pkg/beam/transforms/stats:go_default_library",
    ],
)

# keep
go_binary(
    name = "codelab",
    srcs = [
        "main.go",
        "utils.go",
    ],
    data = [
        "//codelab:day_data.csv",
    ],
    importpath = "github.com/google/differential-privacy/privacy-on-beam/codelab-main",
    visibility = ["//visibility:public"],
    deps = [
        "//codelab:go_default_library",
        "@com_github_apache_beam//sdks/go/pkg/beam:go_default_library",
        "@com_github_apache_beam//sdks/go/pkg/beam/io/filesystem/local:go_default_library",
        "@com_github_apache_beam//sdks/go/pkg/beam/io/textio:go_default_library",
        "@com_github_apache_beam//sdks/go/pkg/beam/runners/direct:go_default_library",
        "@com_github_apache_beam//sdks/go/pkg/beam/transforms/stats:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_gonum_v1_plot//:go_default_library",
        "@org_gonum_v1_plot//plotter:go_default_library",
        "@org_gonum_v1_plot//plotutil:go_default_library",
        "@org_gonum_v1_plot//vg:go_default_library",
    ],
)
