#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/google/differential-privacy/privacy-on-beam/v3/codelab
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "count.go",
        "mean.go",
        "multiple.go",
        "public_partitions.go",
        "sum.go",
        "visit.go",
    ],
    importpath = "github.com/google/differential-privacy/privacy-on-beam/v3/codelab",
    visibility = ["//visibility:public"],
    deps = [
        "//pbeam:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/register:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/transforms/stats:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)
