#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/google/differential-privacy/privacy-on-beam/testdata
gazelle(name = "gazelle")

proto_library(
    name = "differential_privacy_privacy_on_beam_test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "differential_privacy_privacy_on_beam_test_go_proto",
    importpath = "github.com/google/differential-privacy/privacy-on-beam/testdata",
    proto = ":differential_privacy_privacy_on_beam_test_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":differential_privacy_privacy_on_beam_test_go_proto"],
    importpath = "github.com/google/differential-privacy/privacy-on-beam/testdata",
    visibility = ["//visibility:public"],
)
